# memify

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
OldVer/src/: main.py  menu.py
OldVer/src/.bak/: example_menu.py
gui/: gui.py
memify/: main.py  menu.py
oldver/: requirements.txt
oldver/src/: flashcard.py  helpers.py
src/: __main__.py  flashcard.py  helpers.py  main.py  menu.py  requirements.txt
src/.bak/: first-attempt.py
src/macos/: macos.py
src/memify/: flashcard.py  helpers.py  main.py  menu.py
