[tool.poetry]
name = "memify"
version = "0.1.0"
description = "Simple command-line flashcard program."
authors = ["clamsfeel2"]
license = "MIT"
readme = "README.md"
packages = [ { include = "memify", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8"
rich = ">=14.0.0"
simple-term-menu = ">=1.6.6"

[tool.poetry.scripts]
memify = "memify.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
