[project]
name = "memify"
version = "0.1.1"
description = "Simple command-line flashcard program."
authors = [{ name = "clamsfeel2", email = "clamsfeel@proton.me" }]
license = "MIT"
readme = "README.md"
dependencies = ["rich>=14.0.0,<15.0.0"]
requires-python = ">=3.8"

[project.scripts]
memify = "memify.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
